- refatorado testes e ajustes